--- a/BookerPortal.Web/Components/Layout/SideBar.razor
+++ b/BookerPortal.Web/Components/Layout/SideBar.razor
@@ -9,7 +9,7 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
 
-        <AuthorizeView Roles="Admin,User">
+        <AuthorizeView Roles="Admin,Employee">
             <Authorized>
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="booking">
@@ -26,6 +26,11 @@
         </AuthorizeView>
        
         <AuthorizeView Roles="Admin,Manager">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="employee">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Employees
+                </NavLink>
+            </div>
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="movie">
                     <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Movies
