--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
@@ -7,73 +7,13 @@
 @inject IShowService showService
 @inject IReservationService reservationService
 @attribute [StreamRendering]
-@attribute [Authorize(Roles = "Admin,User")]
+@attribute [Authorize(Roles = "Admin,Employee")]
 <PageTitle>Bokningar</PageTitle>
 
-<style>
-
-    .modal {
-        display: none; 
-        position: fixed; 
-        z-index: 1; 
-        left: 0;
-        top: 0;
-        width: 100%; 
-        height: 100%; 
-        overflow: auto; 
-        background-color: rgba(0, 0, 0, 0.4); 
-    }
-
-    .modal-content {
-        background-color: #fefefe;
-        margin: 15% auto; 
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%; /
-    }
-
-    .close {
-        color: #aaa;
-        float: right;
-        font-size: 28px;
-        font-weight: bold;
-    }
-
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
-</style>
 
 @if (bookers != null)
 {
-    <div class="table-container">
-        @if (isModalOpen)
-        {
-            <div class="modal" style="display: block;">
-                <div class="modal-content">
-                    <span class="close" @onclick="CloseModal">&times;</span>
-                    <p>Boka</p>
-                    <label for="dropdown">Välj en visning:</label>
-                    <select id="dropdown" @bind="selectedShowId">
-                        @foreach (var s in schedule)
-                        {
-                            <p>@s.Date.ToShortDateString()</p>
-                            @foreach (var show in s.Shows)
-                            {
-                                <option value="@show.Id">@show.MovieTitle - @show.StartTime - Platser kvar: @show.AvailableSeats</option>
-                            }
-                        }
-                    </select>
-                    <label for="seatCount">Antal platser:</label>
-                    <input type="number" id="seatCount" @bind="selectedSeatCount" min="1" max="10"> <!-- Adjust min and max values as needed -->
-                    <Button Color="ButtonColor.Primary"  @onclick="MakeReservation">Boka</Button>
-                </div>
-            </div>
-        }
-
+    <AddItemsBooker></AddItemsBooker>
         <table class="table">
             <thead>
                 <tr>
@@ -128,7 +68,6 @@
                 }
             </tbody>
         </table>
-    </div>
 }
 
 
@@ -138,8 +77,6 @@
     private string errorMessage;
     private bool isEditMode;
     private int selectedId = 0;
-    private bool isModalOpen = false;
-    private int itemIdForModal = 0;
     private int selectedShowId;
     private int selectedBookerId;
     private int selectedSeatCount;
@@ -171,25 +108,6 @@
         {
             errorMessage = "An error occurred while retrieving data. Please try again later.";
 
-            Console.WriteLine($"Error: {ex.Message}");
-        }
-    }
-
-    private async Task MakeReservation()
-    {
-        try
-        {
-            ReservationDTO reservationDTO = new()
-                {
-                    BookerId = selectedBookerId,
-                    ShowId = selectedShowId,
-                    BookedSeats = selectedSeatCount // Use the selected number of seats
-                };
-            await reservationService.PostReservation(reservationDTO);
-        }
-        catch (Exception ex)
-        {
-            errorMessage = "An error occurred while retrieving data. Please try again later.";
             Console.WriteLine($"Error: {ex.Message}");
         }
     }
@@ -226,18 +144,6 @@
 
     protected void OpenModal(int id)
     {
-        itemIdForModal = id;
-        isModalOpen = true;
         selectedBookerId = id;
-    }
-
-    protected void CloseModal()
-    {
-        isModalOpen = false;
-    }
-
-    protected async Task SaveChanges()
-    {
-        isModalOpen = false;
     }
 }
