Design and modal for adds progressions

--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
@@ -1,4 +1,4 @@
-﻿@page "/addemployee"
+﻿@page "/add-item-employee"
 @using Request.HTTP.DTO.MovieTheatreDTO
 @using Request.HTTP.RequestService.IRequestService
 @using BookerPortal.Web.ViewModels
