--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Employee.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Employee.razor
@@ -4,6 +4,7 @@
 @using BookerPortal.Web.Components.EditItems.MovieTheatreEdit.EditEmployee
 @rendermode InteractiveServer
 @inject IEmployeeService employeeService
+@inject NavigationManager Navigation
 @attribute [StreamRendering]
 @attribute [Authorize(Roles = "Admin,Manager")]
 <PageTitle>Anställda</PageTitle>
@@ -14,10 +15,11 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Title</th>
-                    <th>Director</th>
-                    <th>Description</th>
-                    <th>Genre</th>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Last name</th>
+                    <th>Email</th>
+                    <th>Role</th>
                 </tr>
             </thead>
             <tbody>
@@ -32,6 +34,7 @@
                                 <td><input @bind="item.Name" /></td>
                                 <td><input @bind="item.LastName" /></td>
                                 <td><input @bind="item.Email" /></td>
+                                <td><input @bind="item.Role" /></td>
                                 <EditItemEmployee employeeDTO="item" OnEdited=@OnEdited></EditItemEmployee>
                             }
                             else
@@ -40,8 +43,16 @@
                                 <td class="smooth-text">@item.Name</td>
                                 <td class="smooth-text">@item.LastName</td>
                                 <td class="smooth-text">@item.Email</td>
+                                <td class="smooth-text">@item.Role</td>
                                 <td>
-                                    <div style="display:flex">
+                                    <div style="display:flex; align-items: center;">
+                                        <button class="btn btn-success" @onclick="NavigateToAddPage" style="margin-right:10px">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
+                                                <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z" />
+                                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4" />
+                                            </svg>
+                                        </button>
+
                                         <button class="btn btn-warning" @onclick="() => SetEditMode(item)" style="margin-right:10px">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
                                                 <path d="M12.354 1.646a.5.5 0 0 1 0 .708l-9 9a.5.5 0 0 1-.708-.708l9-9a.5.5 0 0 1 .708 0zm-1.708.708L3 11.5v1.5a.5.5 0 0 0 .5.5H5l9.146-9.146-1.5-1.5z" />
@@ -49,9 +60,7 @@
                                         </button>
                                         <RemoveItemEmployee employeeDTO="item" OnRemove=@OnRemove></RemoveItemEmployee>
                                     </div>
-
                                 </td>
-
                             }
                         </tr>
                     }
@@ -72,13 +81,10 @@
         try
         {
             employee = await employeeService.GetEmployee();
-
-
         }
         catch (Exception ex)
         {
             errorMessage = "An error occurred while retrieving data. Please try again later.";
-
             Console.WriteLine($"Error: {ex.Message}");
         }
     }
@@ -88,29 +94,25 @@
         await LoadEmployees();
     }
 
-
     protected async Task OnRemove()
     {
         await LoadEmployees();
-
     }
-
 
     protected async Task OnEdited()
     {
         selectedId = 0;
         isEditMode = false;
         await LoadEmployees();
-
     }
 
-    protected async Task SetEditMode(EmployeeDTO employeeDTO)
+    protected void SetEditMode(EmployeeDTO employeeDTO)
     {
         selectedId = employeeDTO.Id;
         isEditMode = true;
-
     }
-
+    protected void NavigateToAddPage()
+    {
+        Navigation.NavigateTo("/add-item-employee");
+    }
 }
-
-
