--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
@@ -35,9 +35,9 @@
                         <td><input class="form-control" @bind="item.Email" /></td>
                         <td><input class="form-control" @bind="item.PhoneNumber" /></td>
                         <td>
-                            <button class="btn btn-success btn-sm" @onclick="() => SaveChanges(item)">Spara</button>
-                            <button class="btn btn-danger btn-sm" @onclick="CancelEdit">Avbryt</button>
+                            <EditItemBooker bookerDTO="item" OnEdited=@OnEdited></EditItemBooker>
                         </td>
+                        
                     }
                     else
                     {
@@ -49,7 +49,11 @@
                         <td>
                             <button class="btn btn-success btn-sm" @onclick="OpenAddModal">Boka</button>
                             <button class="btn btn-warning btn-sm" @onclick="() => SetEditMode(item)">Redigera</button>
-                            <button class="btn btn-danger btn-sm" @onclick="() => RemoveBooker(item)">Radera</button>
+                            @if (!isEditMode || selectedId != item.Id)
+                            {
+                                <RemoveItemBooker bookerDTO="item" OnRemove=@OnRemove></RemoveItemBooker>
+                            }
+                            
                         </td>
                     }
                 </tr>
