All table the same

--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditBooker/EditItemBooker.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditBooker/EditItemBooker.razor
@@ -6,7 +6,7 @@
 @inject IBookerService bookerService
 
 <td>
-    <button class="btn btn-success" @onclick="() => EditBooker()">
+    <button class="btn btn-success btn-sm" @onclick="() => EditBooker()">
         Save
     </button>
 </td>
