--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
@@ -128,7 +128,7 @@
 
         if (response.IsSuccessStatusCode)
         {
-            navigationManager.NavigateTo("/");
+            navigationManager.NavigateTo("/employee");
         }
         else
         {
