--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/EditItemEmployee.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/EditItemEmployee.razor
@@ -6,7 +6,7 @@
 @inject IEmployeeService employeeService
 
 <td>
-    <button class="btn btn-success" @onclick="() => EditEmployee()">
+    <button class="btn btn-success btn-sm" @onclick="() => EditEmployee()">
         Save
     </button>
 </td>
