--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/EditItemMovie.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/EditItemMovie.razor
@@ -6,7 +6,7 @@
 @inject IMovieService movieService
 
 <td>
-    <button class="btn btn-success" @onclick="() => EditMovie()">
+    <button class="btn btn-success btn-sm" @onclick="() => EditMovie()">
         Save
     </button>
 </td>
