--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditReservation/EditItemReservation.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditReservation/EditItemReservation.razor
@@ -6,7 +6,7 @@
 @inject IReservationService reservationService
 
 <td>
-    <button class="btn btn-success" @onclick="() => EditReservation()">
+    <button class="btn btn-success btn-sm" @onclick="() => EditReservation()">
         Save
     </button>
 </td>
