--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditShow/EditItemShow.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditShow/EditItemShow.razor
@@ -6,7 +6,7 @@
 @inject IShowService showService
 
 <td>
-    <button class="btn btn-success" @onclick="() => EditShow()">
+    <button class="btn btn-success btn-sm" @onclick="() => EditShow()">
         Save
     </button>
 </td>
