--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Salon.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Salon.razor
@@ -10,55 +10,53 @@
 
 @if (salon != null)
 {
-    <div class="table-container">
-        <table class="table">
-            <thead>
+    <table class="table table-bordered table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th>ID</th>
+                <th>Namn</th>
+                <th>Status</th>
+                <th>Antal platser</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in salon)
+            {
                 <tr>
-                    <th>Name</th>
-                    <th>AvailableSeats</th>
-                    <th>Status</th>
-                    <th> </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in salon)
-                {
-                    if (item != null)
+                    @if (isEditMode && selectedId == item.Id)
                     {
-                        <tr>
-                            @if (isEditMode && selectedId == item.Id)
-                            {
-                                <td><input @bind="item.Name" /></td>
-                                <td><input @bind="item.AvailableSeats" /></td>
-                                <td><input @bind="item.Status" /></td>
-                             
-                                <EditItemSalon salonDTO="item" OnEdited=@OnEdited></EditItemSalon>
-                            }
-                            else
-                            {
-                                <td class="smooth-text">@item.Name</td>
-                                <td class="smooth-text">@item.AvailableSeats</td>
-                                <td class="smooth-text">@item.Status</td>
-                                <td>
-                                    <div style="display:flex">
-                                        <button class="btn btn-warning" @onclick="() => SetEditMode(item)" style="margin-right:10px">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
-                                                <path d="M12.354 1.646a.5.5 0 0 1 0 .708l-9 9a.5.5 0 0 1-.708-.708l9-9a.5.5 0 0 1 .708 0zm-1.708.708L3 11.5v1.5a.5.5 0 0 0 .5.5H5l9.146-9.146-1.5-1.5z" />
-                                            </svg>
-                                        </button>
-                                        <RemoveItemSalon salonDTO="item" OnRemove=@OnRemove></RemoveItemSalon>
-                                    </div>
-
-                                </td>
-
-                            }
-                        </tr>
+                        <td>@item.Id</td>
+                        <td><input class="form-control" @bind="item.Name" /></td>
+                        <td><input class="form-control" @bind="item.Status"/></td>
+                        <td><input class="form-control" @bind="item.AvailableSeats" /></td>
+                        <td>
+                            <EditItemSalon salonDTO="item" OnEdited=@OnEdited></EditItemSalon>
+                        </td>
+                        
                     }
-                }
-            </tbody>
-        </table>
-    </div>
+                    else
+                    {
+                        <td>@item.Id</td>
+                        <td>@item.Name</td>
+                        <td>@item.Status</td>
+                        <td>@item.AvailableSeats</td>
+
+                        <td>
+                            <button class="btn btn-warning btn-sm" @onclick="() => SetEditMode(item)">Redigera</button>
+                            @if (!isEditMode || selectedId != item.Id)
+                            {
+                                <RemoveItemSalon salonDTO="item" OnRemove=@OnRemove></RemoveItemSalon>
+                            }
+                            
+                        </td>
+                    }
+                </tr>
+            }
+        </tbody>
+    </table>
 }
+
 
 @code {
     private List<SalonDTO> salon;
