--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Reservation.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Reservation.razor
@@ -18,6 +18,7 @@
                 <th>Show ID</th>
                 <th>Platser</th>
                 <th>Tid</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
