--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Show.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Show.razor
@@ -21,6 +21,7 @@
                     <th>Start</th>
                     <th>Slut</th>
                     <th>Platser kvar</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
