--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
@@ -20,6 +20,7 @@
                 <th>Last Name</th>
                 <th>Email</th>
                 <th>Phone Number</th>
+                <th>Booking number</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -34,6 +35,7 @@
                         <td><input class="form-control" @bind="item.LastName" /></td>
                         <td><input class="form-control" @bind="item.Email" /></td>
                         <td><input class="form-control" @bind="item.PhoneNumber" /></td>
+                        <td>@item.BookingNumber</td>
                         <td>
                             <EditItemBooker bookerDTO="item" OnEdited=@OnEdited></EditItemBooker>
                         </td>
@@ -46,6 +48,7 @@
                         <td>@item.LastName</td>
                         <td>@item.Email</td>
                         <td>@item.PhoneNumber</td>
+                        <td>@item.BookingNumber</td>
                         <td>
                             <button class="btn btn-success btn-sm" @onclick="OpenAddModal">Boka</button>
                             <button class="btn btn-warning btn-sm" @onclick="() => SetEditMode(item)">Redigera</button>
