--- a/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
+++ b/Booking.View/Components/Modals/MovieTheatreBookingModal.razor
@@ -78,25 +78,25 @@
 <div class="container">
     <div class="card mx-auto mt-5" style="max-width: 500px;">
         <div class="card-body">
-            <EditForm Model="@booker" OnValidSubmit="@SubmitForm" FormName="BookerDTO">
+            <EditForm Model="@bookerDTO" OnValidSubmit="@SubmitForm" FormName="BookerDTO">
                 <div class="mb-3">
                     <label for="Name" class="form-label">Namn:</label>
-                    <InputText type="text" id="Name" class="form-control" @bind-Value="booker.Name" required />
+                    <InputText type="text" id="Name" class="form-control" @bind-Value="bookerDTO.Name" required />
                 </div>
 
                 <div class="mb-3">
                     <label for="LastName" class="form-label">Efternamn:</label>
-                    <InputText type="text" id="LastName" class="form-control" @bind-Value="booker.LastName" required />
+                    <InputText type="text" id="LastName" class="form-control" @bind-Value="bookerDTO.LastName" required />
                 </div>
 
                 <div class="mb-3">
                     <label for="Email" class="form-label">Email:</label>
-                    <InputText type="email" id="Email" class="form-control" @bind-Value="booker.Email" required />
+                    <InputText type="email" id="Email" class="form-control" @bind-Value="bookerDTO.Email" required />
                 </div>
 
                 <div class="mb-3">
                     <label for="PhoneNumber" class="form-label">Telefon nummer:</label>
-                    <InputText type="tel" id="PhoneNumber" class="form-control" @bind-Value="booker.PhoneNumber" required />
+                    <InputText type="tel" id="PhoneNumber" class="form-control" @bind-Value="bookerDTO.PhoneNumber" required />
                 </div>
                  <div class="mb-3">
                     <label for="BookedSeats" class="form-label">Antal platser:</label>
@@ -114,7 +114,7 @@
             <div style="text-align: center; display: flex; align-items: center; flex-direction: column;">
                 @if (!string.IsNullOrWhiteSpace(successMessage))
                 {
-                    <BookingConfirmation Booker="@booker" Reservation="@reservation" />
+                    <BookingConfirmation Booker="@bookerDTO" Reservation="@reservation" />
                     <div class="success-message">
                         <span style="display: flex; align-items: center;">
                             @successMessage
@@ -138,7 +138,7 @@
 
 @code {
     [SupplyParameterFromForm]
-    public BookerDTO booker { get; set; }
+    public BookerDTO bookerDTO { get; set; }
     [SupplyParameterFromForm]
     public ReservationDTO reservation { get; set; }
 
@@ -148,7 +148,7 @@
 
     protected override void OnInitialized()
     {
-        booker ??= new BookerDTO();
+        bookerDTO ??= new BookerDTO();
         reservation ??= new ReservationDTO();
     }
 
@@ -156,14 +156,14 @@
     {
         try
         {
-            var postForm = await BookerService.PostBooking(booker);
+            var postForm = await BookerService.PostBooking(bookerDTO);
             if (postForm)
             {
              
                 successMessage = "Bokning slutförd";
                 errorMessage = ""; 
 
-                booker = new BookerDTO();
+                bookerDTO = new BookerDTO();
             }
             else
             {
