--- a/BookerPortal.Web/Components/Pages/Account/OnlineHome.razor
+++ b/BookerPortal.Web/Components/Pages/Account/OnlineHome.razor
@@ -8,37 +8,144 @@
         border: 2px solid black;
         padding: 10px;
     }
+
+    .scrollable-content {
+        max-height: 320px;
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
 </style>
 
-
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Upcoming Shows</h5>
-                    <p class="card-text">Get ready for the excitement! Check out our upcoming shows and mark your calendars for the entertainment extravaganza.</p>
+<div class="row justify-content-center">
+    <!-- Recently Added Movies Card -->
+    <div class="col-12 col-md-4 mb-4">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Recently Added Movies</h5>
+                <p class="card-text">Catch the latest blockbusters! Explore our collection of recently added movies and dive into the world of cinema.</p>
+                <div class="scrollable-content">
+                    <div class="row">
+                        <div class="col-12 mb-2">
+                            <div class="card">
+                                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg6vbNvnbFJNH9py_iWc6r9J_EWssBs8nmMm9Nht7e4H0FSMTO1JbWCmWn6QiD5Sp7kui9feEfU4jtgHKXWCVBzdOgrYS-ApzwU8WNgNva14Vg9YEiFTzHovRhKILm_1U8VeR-Fb44dGMTA/s640/Great+Adventure,+The.jpg" alt="The Great Adventure" class="movie-img">
+                                <div class="card-body">
+                                    <h5 class="card-title">The Great Adventure</h5>
+                                    <p class="card-text">
+                                        <strong>Description:</strong> An epic journey through uncharted territories.<br>
+                                        <strong>Director:</strong> Gianfranco Baldanello<br>
+                                        <strong>Duration:</strong> 1h 38m<br>
+                                        <strong>Release Year:</strong> 1975<br>
+                                        <strong>Age Restriction:</strong> 13<br>
+                                        <strong>Max Shows:</strong> 15<br>
+                                        <strong>Genre:</strong> Adventure<br>
+                                        <strong>Language:</strong> Italian<br>
+                                        <strong>Subtitle:</strong> English
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 mb-2">
+                            <div class="card">
+                                <img src="https://static1.squarespace.com/static/63bb3e8a824d7e2f7eedf0d3/64ac424fcaadf8324a193593/65fd7578f4fbe611043e2cf3/1711371652804/Imaginary%2BHorizontal%2B2.jpg?format=1500w" alt="Imaginary" class="movie-img" />
+                                <div class="card-body">
+                                    <h5 class="card-title">Imaginary</h5>
+                                    <p class="card-text">
+                                        <strong>Description:</strong> A woman returns to her childhood home to discover that the imaginary friend she left behind is very real and unhappy that she abandoned him.<br>
+                                        <strong>Director:</strong> Jeff Wadlow<br>
+                                        <strong>Duration:</strong> 1h 45m<br>
+                                        <strong>Release Year:</strong> 2024<br>
+                                        <strong>Age Restriction:</strong> 18<br>
+                                        <strong>Max Shows:</strong> 17<br>
+                                        <strong>Genre:</strong> Horror<br>
+                                        <strong>Language:</strong> English<br>
+                                        <strong>Subtitle:</strong> Swedish
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 mb-2">
+                            <div class="card">
+                                <img src="https://cdn.moveek.com/storage/media/cache/tall/661752c9712c7584326468.jpg" alt="Furiosa" class="movie-img"/>
+                                <div class="card-body">
+                                    <h5 class="card-title">Furiosa: A Mad Max Saga</h5>
+                                    <p class="card-text">
+                                        <strong>Description:</strong> The origin story of renegade warrior Furiosa before her encounter and teamup with Mad Max<br>
+                                        <strong>Director:</strong>George Miller<br>
+                                        <strong>Duration:</strong> 2h 28m<br>
+                                        <strong>Release Year:</strong> 2024<br>
+                                        <strong>Age Restriction:</strong> 16<br>
+                                        <strong>Max Shows:</strong> 15<br>
+                                        <strong>Genre:</strong> Action<br>
+                                        <strong>Language:</strong> English<br>
+                                        <strong>Subtitle:</strong> Swedish
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Recently Added Movies</h5>
-                    <p class="card-text">Catch the latest blockbusters! Explore our collection of recently added movies and dive into the world of cinema.</p>
+    <div class="col-12 col-md-4 mb-4">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Amount of Bookers This Month</h5>
+                <p class="card-text">Track the success of your events! See the number of bookers for this month and plan your next moves accordingly.</p>
+                <div class="scrollable-content">
+                    <ul class="list-group">
+                        <li class="list-group-item"><strong>John Smith:</strong> 5 bookings</li>
+                        <li class="list-group-item"><strong>Jane Doe:</strong> 3 bookings</li>
+                        <li class="list-group-item"><strong>Emily Johnson:</strong> 4 bookings</li>
+                        <li class="list-group-item"><strong>Michael Brown:</strong> 2 bookings</li>
+                        <li class="list-group-item"><strong>Chris Davis:</strong> 1 booking</li>
+                        <li class="list-group-item"><strong>Amy Wilson:</strong> 6 bookings</li>
+                        <li class="list-group-item"><strong>David Martinez:</strong> 4 bookings</li>
+                        <li class="list-group-item"><strong>Sarah Lee:</strong> 3 bookings</li>
+                        <li class="list-group-item"><strong>Daniel Clark:</strong> 2 bookings</li>
+                        <li class="list-group-item"><strong>Nancy Allen:</strong> 7 bookings</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Amount of Bookers This Month</h5>
-                    <p class="card-text">Track the success of your events! See the number of bookers for this month and plan your next moves accordingly.</p>
+    <div class="col-12 col-md-4 mb-4">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Upcoming Shows</h5>
+                <p class="card-text">Get ready for the excitement! Check out our upcoming shows and mark your calendars for the entertainment extravaganza.</p>
+                <div class="scrollable-content">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <strong>Movie:</strong> The Great Adventure<br>
+                            <strong>Salon:</strong> Salon 1<br>
+                            <strong>Available Seats:</strong> 50<br>
+                            <strong>Start Time:</strong> 2023-06-01 18:00<br>
+                            <strong>End Time:</strong> 2023-06-01 20:30<br>
+                            <strong>Price Per Seat:</strong> $15<br>
+                            <strong>VAT:</strong> 25%
+                        </li>
+                        <li class="list-group-item">
+                            <strong>Movie:</strong> Imaginary<br>
+                            <strong>Salon:</strong> Salon 2<br>
+                            <strong>Available Seats:</strong> 30<br>
+                            <strong>Start Time:</strong> 2023-06-02 20:00<br>
+                            <strong>End Time:</strong> 2023-06-02 21:45<br>
+                            <strong>Price Per Seat:</strong> $12<br>
+                            <strong>VAT:</strong> 25%
+                        </li>
+                        <li class="list-group-item">
+                            <strong>Movie:</strong> Furiosa<br>
+                            <strong>Salon:</strong> Salon 3<br>
+                            <strong>Available Seats:</strong> 40<br>
+                            <strong>Start Time:</strong> 2023-06-03 22:00<br>
+                            <strong>End Time:</strong> 2023-06-03 00:28<br>
+                            <strong>Price Per Seat:</strong> $18<br>
+                            <strong>VAT:</strong> 25%
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-
+</div>
